# the_city_and_the_tower

./: .gitignore  CMakeLists.txt  README.md  The-City-and-the-Tower.rar  debug.c  debug.h  draw.c  draw.h  game.c  items.c  items.h  level.c  level.h  log.txt  lvl01  lvl01.txt  main.c  makefile  menu.h  player.c  player.h  test.c  todo.txt
header/: debug.h  draw.h  highlight.h  item.h  level.h  light.h  main.h  player.h  tools.h
header/draw/: audio.h  draw.h  menu.h
header/level/: draw.h  highlight.h  level.h  light.h  menu.h
header/level/objects/: item.h  player.h
header/objects/: player.h
images/: logo.txt
level/: lvl01-2.txt  lvl01.txt  lvl02-1.txt  lvl02-2.txt  lvl03-1.txt  lvl03-2.txt  lvl08-1.txt
logs/: log1112210827.txt
other/: README.md
src/: debug.c  debug.d  draw.c  highlight.c  item.c  level.c  light.c  main.c  main.d  menu.c  player.c  tools.c  tools.d
src/draw/: audio.c  audio.d  draw.c  draw.d  menu.c  menu.d
src/level/: highlight.c  highlight.d  level.c  level.d  light.c  light.d
src/level/objects/: item.c  item.d  player.c  player.d
test/: test1.c  test2.c
